--- a/partner_portal.html
+++ b/partner_portal.html
@@ -1,4 +1,19 @@
-#0a0a0a;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coming Soon - Renew Chain Relief Collective Partner Portal</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+            background: #0a0a0a;
             color: #e0e0e0;
             display: flex;
             flex-direction: column;
@@ -63,31 +78,10 @@
 <body>
     <h1>Coming Soon!</h1>
     <p>The Renew Chain Relief Collective Partner Portal is on its way. Stay tuned for updates!</p>
-    <a href="index.html" class="cta-button">Visit Our Main Site</a>
-
+    <a href="mailto:info@renewchainrelief.org" class="cta-button">Contact Us</a>
+    
     <footer>
         <span>&copy; 2025 Renew³. All rights reserved. 501(c)(3) Tax-Exempt Organization</span>
     </footer>
 </body>
 </html>
-```
-
-### Explanation of the Code:
-
-1. **HTML Structure**: The document is structured with a `head` section containing metadata and styles, and a `body` section containing the main content.
-
-2. **Styling**: 
-   - The styles are defined within a `<style>` tag in the head. 
-   - The body has a dark background with light text for contrast.
-   - The heading uses a gradient text effect to make it visually appealing.
-   - A call-to-action button is styled to stand out and has a hover effect.
-
-3. **Responsive Design**: Media queries adjust the font sizes for smaller screens to ensure readability.
-
-4. **Footer**: A simple footer is included to provide copyright information.
-
-### Usage:
-- Save the code in an HTML file (e.g., `coming-soon.html`).
-- Open the file in a web browser to view the "Coming Soon" page. 
-
-Feel free to customize the content, styles, and links as needed!
