--- a/consultation.html
+++ b/consultation.html
@@ -494,7 +494,7 @@
                         <div class="contact-method">
                             <span class="contact-icon">🌐</span>
                             <div class="contact-details">
-                                <strong><a href="partner-portal-coming-soon/partner_portal.html" target="_blank" style="color: inherit; text-decoration: none;">Online: Partner Portal</a></strong>
+                                <strong><a href="partner_portal.html" target="_blank" style="color: inherit; text-decoration: none;">Online: Partner Portal</a></strong>
                                 <p>Access our secure partnership platform for scheduling and resources</p>
                             </div>
                         </div>
@@ -665,4 +665,5 @@
         </div>
     </footer>
 </body>
+
 </html>
